<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="copyright"> \u00a9 2016-2018 ALEXIZ APP Group </string>
    <string name="version_1"> Version </string>
    <string name="website"> Official Website </string>
    <string name="webAddress"> www.alexizdevs.com </string>
    <string name="feedback"> Feedback </string>
    <string name="version_1.0"> Version 1.0.0 </string>
    <string name="no_internet"> No Internet Connection </string>
    <string name="instruction"> Please use the button below </string>
    <string name="app_name">Quake Report</string>
    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
  if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
